fix : add real website content on the footer about page and contact page

--- a/about.html
+++ b/about.html
@@ -132,14 +132,24 @@
             <div class="story">
               <h2 class="about-title">Our Story</h2>
               <p>
-                We transform plastic waste into affordable 3D-printing filaments
-                and classroom-ready STEM models—making hands-on learning
-                accessible while cleaning our environment.
+                EcoPrint didn’t begin in a boardroom ,it was born on the streets
+                and shores of Mombasa, Kenya, where plastic waste had become
+                both a crisis and a calling. five young changemakers from
+                Mombasa who came together during the Mombasa
               </p>
               <p>
-                From oceans and landfills to labs and schools, EcoPrint
-                Generation connects circular materials with real education
-                impact.
+                Plastic Prize Competition, a challenge designed to inspire
+                solutions to the plastic waste crisis. As we worked, we realized
+                we shared something bigger than an idea: a deep frustration with
+                how our communities were being left behind in both
+                sustainability and education and a determination to do something
+                about it.
+              </p>
+              <p>
+                We saw how students in under-resourced schools were struggling
+                with STEM subjects because they had never touched a lab model,
+                and how plastic waste was choking our environment. What if the
+                solution to one problem could solve the other?
               </p>
             </div>
           </div>
@@ -147,15 +157,15 @@
             <div class="ab-mission-vission">
               <div class="ab-mission">
                 <p>
-                  EcoPrint Generation’s mission is to transform plastic waste
-                  into sustainable 3D printing materials that empower education,
-                  innovation, and environmental conservation—turning waste into
-                  opportunity for a cleaner, smarter, and more inclusive future.
+                  We visson a world where every piece of plastic tells a new
+                  story ,one of education, innovation, and a planet restored by
+                  the very youth it once endangered.
                 </p>
                 <p>
-                  A continent where every learner can touch, see, and build
-                  science— powered by sustainable materials and community
-                  innovation.
+                  So we have a mission to reduce environmental pollution and
+                  transform access to quality STEM education by converting
+                  plastic waste into impactful 3D printing solutions for schools
+                  and communities.
                 </p>
               </div>
             </div>
@@ -221,15 +231,29 @@
                 <div class="service-card fadeIn">
                   <div class="icon">
                     <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146414/EcoPrintGeneration/img/up4cii8inoogxkxkcrb9.png"
-                      alt="sustainability"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1762624544/EcoPrintGeneration/img/pviyxxmbyvx3lyas65zk.png"
+                      alt="Purpose Over Profit"
                     />
                   </div>
                   <div class="right-text">
-                    <h4>Sustainability</h4>
+                    <h4>Purpose Over Profit</h4>
                     <p>
-                      We turn waste into opportunity through eco-friendly 3D
-                      printing.
+                      We lead with intention and build with impact in mind.​
+                    </p>
+                  </div>
+                </div>
+
+                <div class="service-card fadeIn">
+                  <div class="icon">
+                    <img
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146414/EcoPrintGeneration/img/up4cii8inoogxkxkcrb9.png"
+                      alt="Sustainability by Design"
+                    />
+                  </div>
+                  <div class="right-text">
+                    <h4>Sustainability by Design</h4>
+                    <p>
+                      Every product, process, and partnership is built to last.​
                     </p>
                   </div>
                 </div>
@@ -238,14 +262,13 @@
                   <div class="icon">
                     <img
                       src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146385/EcoPrintGeneration/img/vvdzfzaxq9sz0id71g4m.png"
-                      alt="Innovation"
+                      alt="Innovation with Heart"
                     />
                   </div>
                   <div class="right-text">
-                    <h4>Innovation</h4>
+                    <h4>Innovation with Heart</h4>
                     <p>
-                      We create smart, modern solutions that drive positive
-                      change.
+                      We use technology not just to automate, but to uplift.
                     </p>
                   </div>
                 </div>
@@ -253,15 +276,15 @@
                 <div class="service-card fadeIn">
                   <div class="icon">
                     <img
-                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/b0h2um6fc8kvgz2rjp58.png"
-                      alt="education"
+                      src="https://res.cloudinary.com/drselhsl4/image/upload/v1762624562/EcoPrintGeneration/img/jutqsninfup7tqog7v4n.png"
+                      alt="Integrity Always"
                     />
                   </div>
                   <div class="right-text">
-                    <h4>Education</h4>
+                    <h4>Integrity Always</h4>
                     <p>
-                      We empower learners and creators through training and
-                      mentorship.
+                      Transparency, trust, and honesty guide every decision we
+                      make.​
                     </p>
                   </div>
                 </div>
@@ -270,13 +293,14 @@
                   <div class="icon">
                     <img
                       src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146380/EcoPrintGeneration/img/z3lv8ycegptzadk35yfa.png"
-                      alt="community"
+                      alt="Community First"
                     />
                   </div>
                   <div class="right-text">
-                    <h4>Community</h4>
+                    <h4>Community First</h4>
                     <p>
-                      We collaborate to build a greener, more connected future.
+                      We don’t solve problems for people ,we solve them with
+                      them.​
                     </p>
                   </div>
                 </div>
@@ -455,53 +479,112 @@
             <h2>Our <em>Impact</em></h2>
           </div>
 
-          <div class="row portfolio-row">
-            <!-- SEO Analysis -->
+          <div class="portfolio-row">
+            <!-- Quality Education (SDG 4) -->
             <div class="col-lg-3 col-md-6 animate slide-up">
               <div class="portfolio-item">
                 <img
                   src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/sp7ffp3zu39llawfv8xv.png"
-                  alt="SEO Analysis"
+                  alt="Quality Education (SDG 4)"
                 />
                 <div class="hidden-content">
-                  <h4>Quality Education (SDG 4)</h4>
+                  <h4>Quality Education</h4>
                   <p>
-                    We create learning tools and STEM models for classrooms,
-                    expanding access to quality education.
+                    We’ve equipped 10+ public schools with 3D-printed STEM
+                    models, giving 400+ students hands-on science learning they
+                    never had before.
                   </p>
                 </div>
               </div>
             </div>
 
-            <!-- Website Reporting -->
+            <!-- Decent Work & Growth (SDG 8)-->
             <div class="col-lg-3 col-md-6 animate slide-up">
               <div class="portfolio-item">
                 <img
                   src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/avdj6h4qbmxcmwwmviwa.png"
-                  alt="Website Reporting"
+                  alt="Decent Work & Growth (SDG 8)"
                 />
                 <div class="hidden-content">
-                  <h4>Decent Work & Growth (SDG 8)</h4>
+                  <h4>Decent Work & Growth</h4>
                   <p>
-                    Local collection, processing, and manufacturing create jobs
-                    and sustainable livelihoods.
+                    EcoPrint creates green jobs, trains youth in 3D tech, and
+                    empowers waste workers through plastic buy-back and
+                    skill-building opportunities.
                   </p>
                 </div>
               </div>
             </div>
 
-            <!-- Performance Tests -->
+            <!-- Responsible Consumption (SDG 12) -->
             <div class="col-lg-3 col-md-6 animate slide-up">
               <div class="portfolio-item">
                 <img
                   src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146402/EcoPrintGeneration/img/l0jp8kdsjbniyflgpgw9.png"
-                  alt="Performance Tests"
+                  alt="Responsible Consumption (SDG 12)"
                 />
                 <div class="hidden-content">
-                  <h4>Responsible Consumption (SDG 12)</h4>
+                  <h4>Responsible Consumption</h4>
                   <p>
-                    By turning plastic waste into products, we reduce waste and
-                    promote circular consumption.
+                    We turn waste into useful products through a circular
+                    process from trash to 3D filament to classroom tools all
+                    with zero waste in production.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Climate Action -->
+
+            <div class="col-lg-3 col-md-6 animate slide-up">
+              <div class="portfolio-item">
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627090/EcoPrintGeneration/img/bprd5dmxthbclhmsri4r.png"
+                  alt="Climate Action (SDG 13)"
+                />
+                <div class="hidden-content">
+                  <h4>Climate Action</h4>
+                  <p>
+                    We have diverted over 17 tonnes of plastic waste from
+                    landfills and burning sites helping reduce emissions and
+                    protect the environment.With a production having zero carbon
+                    emission
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Life Below Water -->
+            <div class="col-lg-3 col-md-6 animate slide-up">
+              <div class="portfolio-item">
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627103/EcoPrintGeneration/img/dyegnukwzme8axujntqm.png"
+                  alt="Life Below Water (SDG 14)"
+                />
+                <div class="hidden-content">
+                  <h4>Life Below Water</h4>
+                  <p>
+                    By recovering plastic from beaches and coastal communities,
+                    we are protecting marine ecosystems from plastic pollution
+                    before it reaches the ocean.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Life on Land -->
+            <div class="col-lg-3 col-md-6 animate slide-up">
+              <div class="portfolio-item">
+                <img
+                  src="https://res.cloudinary.com/drselhsl4/image/upload/v1762627112/EcoPrintGeneration/img/yqsin8g6zyiahxgy8lkj.png"
+                  alt="Life on Land(SDG 15)"
+                />
+                <div class="hidden-content">
+                  <h4>Life on Land</h4>
+                  <p>
+                    Our clean-up and recycling efforts reduce plastic waste in
+                    informal settlements and landfills helping restore cleaner,
+                    safer communities.
                   </p>
                 </div>
               </div>
@@ -634,7 +717,7 @@
                       alt="team 1"
                     />
                   </div>
-                  <p class="text-blk name">Eco Print</p>
+                  <p class="text-blk name">Gabriel Mwaingo</p>
                   <p class="text-blk position">CEO</p>
                 </div>
               </div>
@@ -647,8 +730,8 @@
                       alt="team 2"
                     />
                   </div>
-                  <p class="text-blk name">Eco Print</p>
-                  <p class="text-blk position">Member</p>
+                  <p class="text-blk name">Shamayel Karani</p>
+                  <p class="text-blk position">COO</p>
                 </div>
               </div>
               <div class="responsive-cell-block team-card-container">
@@ -660,8 +743,8 @@
                       alt="team 3"
                     />
                   </div>
-                  <p class="text-blk name">Eco Print</p>
-                  <p class="text-blk position">Member</p>
+                  <p class="text-blk name">Dafford Owino</p>
+                  <p class="text-blk position">CMO</p>
                 </div>
               </div>
               <div class="responsive-cell-block team-card-container">
@@ -711,20 +794,24 @@
           <!-- Right Cards Section -->
           <div class="award-section">
             <div class="card blue">
-              <h2>Enviromental Innovation Award</h2>
-              <p>Year 2023</p>
+              <h2>Blue and circular economy by sote hub</h2>
+              <p>Year 2025</p>
             </div>
             <div class="card orange">
-              <h2>Climate Action Award</h2>
+              <h2>SOMO AFRICA-CIRCULAR ECONOMY</h2>
+              <p>Year 2025</p>
+            </div>
+            <div class="card orange">
+              <h2>UNFPA SRHR HACKATHON</h2>
               <p>Year 2024</p>
             </div>
             <div class="card blue">
-              <h2>Enviromental Impact Award</h2>
+              <h2>greenovation by afrilabs</h2>
               <p>Year 2024</p>
             </div>
-            <div class="card orange">
-              <h2>Sustainable Product Award</h2>
-              <p>Year 2025</p>
+            <div class="card blue">
+              <h2>Mombasa Plastic prize</h2>
+              <p>Year 2023</p>
             </div>
           </div>
         </div>
@@ -738,14 +825,14 @@
           <div class="supporter-logo">
             <img
               src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146381/EcoPrintGeneration/img/kgpdl32nkqn8f3btagdo.png"
-              alt="Partner 1"
+              alt="Close the gap"
             />
           </div>
 
           <div class="supporter-logo">
             <img
               src="https://res.cloudinary.com/drselhsl4/image/upload/v1761146384/EcoPrintGeneration/img/zm1rmu7wl85vknrf3p7q.png"
-              alt="Partner 2"
+              alt="Infitech Innovation"
             />
           </div>
         </div>
@@ -786,10 +873,18 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://www.linkedin.com/company/eco-prints-generation"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
           </div>
         </div>
       </div>
