--- a/index.html
+++ b/index.html
@@ -206,13 +206,21 @@
           <div class="about-card" data-animate="left">
             <h2 class="about-title">Our Story</h2>
             <p>
-              We transform plastic waste into affordable 3D-printing filaments
-              and classroom-ready STEM models—making hands-on learning
-              accessible while cleaning our environment.
+              EcoPrint Generation is a youth‑led social enterprise changing how
+              sustainability and education intersect. We believe real innovation
+              lifts communities, not leaves them behind. Our work focuses on two
+              urgent challenges: plastic pollution and limited access to STEM
+              learning in underserved schools.
             </p>
             <p>
-              From oceans and landfills to labs and schools, EcoPrint Generation
-              connects circular materials with real education impact.
+              We collect discarded plastics from beaches, landfills, and
+              neighborhoods and give them a new life as 3D printing filament.
+              That filament is then used to create hands-on, curriculum-aligned
+              STEM models for students who rarely get to experience practical
+              science. Our approach is practical, scalable, and deeply human.
+              Every piece of plastic we reclaim from the environment is a step
+              toward a smarter classroom, a cleaner planet, and a more empowered
+              generation
             </p>
           </div>
 
@@ -778,16 +786,16 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="#facebook" aria-label="Facebook"
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
               ><i class="fa-brands fa-facebook-f"></i
             ></a>
-            <a href="#twitter" aria-label="Twitter"
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
               ><i class="fa-brands fa-twitter"></i
             ></a>
-            <a href="#instagram" aria-label="Instagram"
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
               ><i class="fa-brands fa-instagram"></i
             ></a>
-            <a href="#linkedin" aria-label="LinkedIn"
+            <a href="https://www.linkedin.com/company/eco-prints-generation"
               ><i class="fa-brands fa-linkedin-in"></i
             ></a>
           </div>
