--- a/shop.html
+++ b/shop.html
@@ -52,7 +52,9 @@
         <!-- HERO -->
         <article
           class="card card--hero"
-          style="--img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230797/EcoPrintGeneration/img/Customized/qe0qgbvib1airqnsajjw.webp)"
+          style="
+            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230797/EcoPrintGeneration/img/Customized/qe0qgbvib1airqnsajjw.webp);
+          "
           aria-label="shop on EcoPrint"
         >
           <div class="card__inner">
@@ -69,15 +71,15 @@
         <!-- STEM Models -->
         <article
           class="card"
-          style="--img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288299/EcoPrintGeneration/img/models/zzzkvxvxoywkm9hemssh.jpg)"
+          style="
+            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288299/EcoPrintGeneration/img/models/zzzkvxvxoywkm9hemssh.jpg);
+          "
           aria-label="Stem"
         >
           <div class="card__inner">
             <h3 class="badge">STEM Models</h3>
             <div class="hover">
-              <p>
-                Give the Exact Picture to Make learning easier.
-              </p>
+              <p>Give the Exact Picture to Make learning easier.</p>
               <a href="#stem" class="btn btn--ghost">Discover More</a>
             </div>
           </div>
@@ -86,7 +88,9 @@
         <!--Archtecture <br />Prototype<-->
         <article
           class="card"
-          style="--img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230886/EcoPrintGeneration/img/Prototypes/njm0tkpvof7jnujrbn5s.jpg)"
+          style="
+            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230886/EcoPrintGeneration/img/Prototypes/njm0tkpvof7jnujrbn5s.jpg);
+          "
           aria-label="Prototype"
         >
           <div class="card__inner">
@@ -101,7 +105,9 @@
         <!-- 3D printed <br />Accessories -->
         <article
           class="card"
-          style="--img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230742/EcoPrintGeneration/img/assesories/sryoenm5ikd2o7ioixo0.jpg)"
+          style="
+            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230742/EcoPrintGeneration/img/assesories/sryoenm5ikd2o7ioixo0.jpg);
+          "
           aria-label="Accessories"
         >
           <div class="card__inner">
@@ -116,7 +122,9 @@
         <!-- Customize -->
         <article
           class="card"
-          style="--img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230794/EcoPrintGeneration/img/Customized/yq1te7q8pjvdpwt5itfr.jpg)"
+          style="
+            --img: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230794/EcoPrintGeneration/img/Customized/yq1te7q8pjvdpwt5itfr.jpg);
+          "
           aria-label="Customize"
         >
           <div class="card__inner">
@@ -152,7 +160,9 @@
           >
             <div
               class="img"
-              style="background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288299/EcoPrintGeneration/img/models/zjuje4ezmcvmtkhdeikt.jpg)"
+              style="
+                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288299/EcoPrintGeneration/img/models/zjuje4ezmcvmtkhdeikt.jpg);
+              "
             ></div>
             <div class="product-info">
               <h3 class="product-title">Bones Set</h3>
@@ -167,7 +177,9 @@
           >
             <div
               class="img"
-              style="background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288301/EcoPrintGeneration/img/models/j28njkv0pnpzkr8cbnhy.jpg)"
+              style="
+                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288301/EcoPrintGeneration/img/models/j28njkv0pnpzkr8cbnhy.jpg);
+              "
             ></div>
             <div class="product-info">
               <h3 class="product-title">The Brain</h3>
@@ -182,7 +194,9 @@
           >
             <div
               class="img"
-              style="background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288302/EcoPrintGeneration/img/models/zgol21abpxia3tpiedh2.jpg)"
+              style="
+                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288302/EcoPrintGeneration/img/models/zgol21abpxia3tpiedh2.jpg);
+              "
             ></div>
             <div class="product-info">
               <h3 class="product-title">Digestive System</h3>
@@ -197,7 +211,9 @@
           >
             <div
               class="img"
-              style="background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288304/EcoPrintGeneration/img/models/rgihfbpohwavr0e9uydl.jpg)"
+              style="
+                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288304/EcoPrintGeneration/img/models/rgihfbpohwavr0e9uydl.jpg);
+              "
             ></div>
             <div class="product-info">
               <h3 class="product-title">Breathing System</h3>
@@ -212,7 +228,9 @@
           >
             <div
               class="img"
-              style="background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288301/EcoPrintGeneration/img/models/u4yh7cptrcbjz4f4slui.jpg)"
+              style="
+                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761288301/EcoPrintGeneration/img/models/u4yh7cptrcbjz4f4slui.jpg);
+              "
             ></div>
             <div class="product-info">
               <h3 class="product-title">Mathematic Model Set</h3>
@@ -237,8 +255,8 @@
       <div class="latest-head">
         <h2 style="text-align: center">Archtecture Prototype</h2>
         <p class="muted" style="text-align: center">
-          Details to details is what makes EcoPrint Shop different from the other
-          themes.
+          Details to details is what makes EcoPrint Shop different from the
+          other themes.
         </p>
       </div>
 
@@ -289,7 +307,8 @@
             <div
               class="img"
               style="
-                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230882/EcoPrintGeneration/img/Prototypes/xmsd5uhtkzchqimno6tn.jpg);"
+                background-image: url(https://res.cloudinary.com/drselhsl4/image/upload/v1761230882/EcoPrintGeneration/img/Prototypes/xmsd5uhtkzchqimno6tn.jpg);
+              "
             ></div>
             <div class="product-info">
               <h3 class="product-title">Styled Shade</h3>
@@ -348,8 +367,8 @@
       <div class="latest-head">
         <h2 style="text-align: center">3D printed Accessories</h2>
         <p class="muted" style="text-align: center">
-          Details to details is what makes EcoPrint Shop different from the other
-          themes.
+          Details to details is what makes EcoPrint Shop different from the
+          other themes.
         </p>
       </div>
 
@@ -460,8 +479,8 @@
       <div class="latest-head">
         <h2 style="text-align: center">Customize Your Products</h2>
         <p class="muted" style="text-align: center">
-          Details to details is what makes EcoPrint Shop different from the other
-          themes.
+          Details to details is what makes EcoPrint Shop different from the
+          other themes.
         </p>
       </div>
 
@@ -808,10 +827,18 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://www.linkedin.com/company/eco-prints-generation"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
           </div>
         </div>
       </div>
