--- a/contact.html
+++ b/contact.html
@@ -89,16 +89,24 @@
             <!-- Social Media -->
             <div class="contact-social-wrapper">
               <div class="contact-social">
-                <a href="#" class="social-icon"
+                <a
+                  href="https://www.facebook.com/share/1DJY4tXoKu/​"
+                  class="social-icon"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a href="#" class="social-icon"
+                <a
+                  href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+                  class="social-icon"
                   ><i class="fab fa-twitter"></i
                 ></a>
-                <a href="#" class="social-icon"
+                <a
+                  href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+                  class="social-icon"
                   ><i class="fab fa-instagram"></i
                 ></a>
-                <a href="#" class="social-icon"
+                <a
+                  href="https://www.linkedin.com/company/eco-prints-generation"
+                  class="social-icon"
                   ><i class="fab fa-linkedin-in"></i
                 ></a>
               </div>
@@ -152,10 +160,18 @@
         <div class="footer-social">
           <h3>Follow Us</h3>
           <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/share/1DJY4tXoKu/​"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
+            <a href="https://x.com/EcoPrints_?t=iwuBq9mMyq6xOYjKsAFVEg&s=09"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/_ecoprints?igsh=a200bzAyc3RyNnpo"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://www.linkedin.com/company/eco-prints-generation"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
           </div>
         </div>
       </div>
