fix: about us team section

--- a/about.html
+++ b/about.html
@@ -650,8 +650,13 @@
       <section class="media-section" id="media">
         <div class="container">
           <div class="section-header">
-            <h2>Articles</h2>
-            <p>Read our latest stories and press features.</p>
+            <header class="tms-head">
+            <div class="tms-quote-badge" aria-hidden="true">“</div>
+            <h2 class="tms-title">Articles</h2>
+            <p class="tms-sub">Read our latest stories and press features.</p>
+          </header>
+            <!-- <h2>Articles</h2>
+            <p>Read our latest stories and press features.</p> -->
           </div>
 
           <div class="scroll-wrapper">
@@ -702,7 +707,7 @@
           </div>
         </div>
       </section>
-
+      <!-- 
       <section class="our-team animate slide-left" id="team">
         <div class="responsive-container-block outer-container">
           <div class="responsive-container-block inner-container">
@@ -776,8 +781,127 @@
             </div>
           </div>
         </div>
+      </section> -->
+
+      <!-- Team -->
+      <section class="team tms-section animate slide-up" id="testimonials">
+        <div class="tms-container">
+          <header class="tms-head">
+            <div class="tms-quote-badge" aria-hidden="true">“</div>
+            <h2 class="tms-title">Meet Our Team</h2>
+            <p class="tms-sub">The faces behind the work we’re proud of.</p>
+          </header>
+
+          <div class="tms-viewport" aria-label="Testimonials carousel">
+            <ol class="tms-track">
+              <!-- Member 1 -->
+              <li class="tms-slide">
+                <figure class="tms-card">
+                  <div class="tms-top">
+                    <img
+                      class="tms-avatar"
+                      src="https://i.pravatar.cc/120?img=12"
+                      alt="Photo of Amina K."
+                    />
+                    <div>
+                      <h3 class="tms-name">Gabriel Mwaingo</h3>
+                      <p class="tms-role">EcoPrint CEO</p>
+                    </div>
+                  </div>
+                  <blockquote class="tms-quote">
+                    Scaling our conversion of plastic waste into high-quality 3D
+                    filament and STEM models.With a background in BBIT
+                  </blockquote>
+                </figure>
+              </li>
+
+              <!-- Member 2 -->
+              <li class="tms-slide">
+                <figure class="tms-card">
+                  <div class="tms-top">
+                    <img
+                      class="tms-avatar"
+                      src="https://i.pravatar.cc/120?img=32"
+                      alt="Photo of Brian M."
+                    />
+                    <div>
+                      <h3 class="tms-name">Shamayel Karani</h3>
+                      <p class="tms-role">EcoPrint COO</p>
+                    </div>
+                  </div>
+                  <blockquote class="tms-quote">
+                    With a background in computer science and Project management
+                    and an experience of over 5 years in Running a Startups
+                  </blockquote>
+                </figure>
+              </li>
+
+              <!-- Member 3 -->
+              <li class="tms-slide">
+                <figure class="tms-card">
+                  <div class="tms-top">
+                    <img
+                      class="tms-avatar"
+                      src="https://i.pravatar.cc/120?img=5"
+                      alt="Photo of Ruth N."
+                    />
+                    <div>
+                      <h3 class="tms-name">Dafford Owino</h3>
+                      <p class="tms-role">EcoPrint CMO</p>
+                    </div>
+                  </div>
+                  <blockquote class="tms-quote">
+                    Environmental scientist and storyteller
+                  </blockquote>
+                </figure>
+              </li>
+
+              <!-- Member 4 -->
+              <li class="tms-slide">
+                <figure class="tms-card">
+                  <div class="tms-top">
+                    <img
+                      class="tms-avatar"
+                      src="https://i.pravatar.cc/120?img=67"
+                      alt="Photo of David O."
+                    />
+                    <div>
+                      <h3 class="tms-name">Josphine Ochola</h3>
+                      <p class="tms-role">EcoPrint CFO</p>
+                    </div>
+                  </div>
+                  <blockquote class="tms-quote">
+                    Has over 3 years’ experience in finance and portfolio
+                    management.
+                  </blockquote>
+                </figure>
+              </li>
+
+              <!-- Member 5 -->
+              <li class="tms-slide">
+                <figure class="tms-card">
+                  <div class="tms-top">
+                    <img
+                      class="tms-avatar"
+                      src="https://i.pravatar.cc/120?img=67"
+                      alt="Photo of David O."
+                    />
+                    <div>
+                      <h3 class="tms-name">Deogratias Taka</h3>
+                      <p class="tms-role">EcoPrint CTO</p>
+                    </div>
+                  </div>
+                  <blockquote class="tms-quote">
+                    CAD designer and 3D printing technology expert
+                  </blockquote>
+                </figure>
+              </li>
+            </ol>
+          </div>
+        </div>
       </section>
 
+      <!-- Awards and Recognitions -->
       <section class="awards-recognitions animate zoom-in" id="awards">
         <div class="content-section">
           <!-- Left Text Section -->
