--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <ul class="nav-menu" id="nav-menu">
           <li><a href="index.html" class="nav-link active">Home</a></li>
           <li><a href="about.html" class="nav-link">About</a></li>
+          <li><a href="service.html" class="nav-link">Services</a></li>
           <!-- <li class="dropdown">
             <a href="#" class="nav-link"
               >Services <i class="fas fa-chevron-down"></i
@@ -206,21 +207,13 @@
           <div class="about-card" data-animate="left">
             <h2 class="about-title">Our Story</h2>
             <p>
-              EcoPrint Generation is a youth‑led social enterprise changing how
-              sustainability and education intersect. We believe real innovation
-              lifts communities, not leaves them behind. Our work focuses on two
-              urgent challenges: plastic pollution and limited access to STEM
-              learning in underserved schools.
+              We transform plastic waste into affordable 3D-printing filaments
+              and classroom-ready STEM models—making hands-on learning
+              accessible while cleaning our environment.
             </p>
             <p>
-              We collect discarded plastics from beaches, landfills, and
-              neighborhoods and give them a new life as 3D printing filament.
-              That filament is then used to create hands-on, curriculum-aligned
-              STEM models for students who rarely get to experience practical
-              science. Our approach is practical, scalable, and deeply human.
-              Every piece of plastic we reclaim from the environment is a step
-              toward a smarter classroom, a cleaner planet, and a more empowered
-              generation
+              From oceans and landfills to labs and schools, EcoPrint Generation
+              connects circular materials with real education impact.
             </p>
           </div>
 
